# raspir307

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: test.yaml
example/pyfingerprint/: delete.py  downloadimage.py  enroll.py  index.py  search.py
fingerdriver/abcs/: fingerdriver.py
fingerdriver/impls/pyfingerprint/: pf.py
fingerdriver/impls/pyfingerprint/example/: downloadimage.py  index.py
fingerdriver/models/: finger.py
fingerdriver/statics/: exceptions.py  status.py
licenses/pyfingerprint/: LICENSE
raspir307/: __init__.py
raspir307/abcs/: __init__.py  fingerdriver.py
raspir307/impls/: __init__.py
raspir307/impls/pyfingerprint/: __init__.py  pf.py
raspir307/models/: __init__.py
raspir307/statics/: __init__.py  exceptions.py  status.py
