[project]
name = "raspir307"
version = "0.0.2"
description = "A library for R307 fingerprint module using RaspberryPi / RaspberryPi を用いた R307 指紋モジュールのライブラリ"
authors = [
    { name = "FINGER PAY", email = "github@fingerpay.app" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
exclude = [
    "*.lock",
    "example/"
]


[tool.poetry]
name = "raspir307"
version = "0.0.2"
description = "A library for R307 fingerprint module using RaspberryPi / RaspberryPi を用いた R307 指紋モジュールのライブラリ"
authors = [
    "FINGER PAY <github@fingerpay.app>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyfingerprint = "^1.5"
adafruit-fingerprint = "^1.0.0"
adafruit-circuitpython-fingerprint = "^2.2.10"
board = "^1.0"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.0.3"
build = "^0.10.0"
